--- a/main.html
+++ b/main.html
@@ -157,7 +157,7 @@
 
 
     <!--Footer-->
-    <footer class="row row-cols-5 py-5 mt-5  border-top bg-header text-white">
+    <footer class="row row-cols-5 py-5 mt-5 p-2 border-top bg-header text-white">
         <div class="col">
             <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
                 <svg class="bi me-2" width="40" height="32">
