--- a/rutas.html
+++ b/rutas.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="scss/dist/custom.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Destinos</title>
 </head>
 
 <body class="bg-white">
@@ -39,11 +39,175 @@
         </nav>
     </header>
     <!--Body-->
-    <main>
+    <main class="py-4">
+        <div class="container">
+            <div class="row">
+                <!-- Sidebar de filtros -->
+                <aside class="col-md-3 mb-4">
+                    <div class="accordion" id="filterAccordion">
+                        <!-- Fechas -->
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingDate">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseDate" aria-expanded="true" aria-controls="collapseDate">
+                                    Fecha de salida
+                                </button>
+                            </h2>
+                            <div id="collapseDate" class="accordion-collapse collapse show"
+                                data-bs-parent="#filterAccordion">
+                                <div class="accordion-body">
+                                    <label class="form-label">Desde:</label>
+                                    <input type="date" class="form-control mb-2">
+                                    <label class="form-label">Hasta:</label>
+                                    <input type="date" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Puertos -->
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingPort">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapsePort" aria-expanded="false" aria-controls="collapsePort">
+                                    Puertos de salida
+                                </button>
+                            </h2>
+                            <div id="collapsePort" class="accordion-collapse collapse"
+                                data-bs-parent="#filterAccordion">
+                                <div class="accordion-body">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="portMiami">
+                                        <label class="form-check-label" for="portMiami">Miami</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="portFtLaud">
+                                        <label class="form-check-label" for="portFtLaud">Fort Lauderdale</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="portCanav">
+                                        <label class="form-check-label" for="portCanav">Puerto Canaveral</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Barcos -->
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingShip">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseShip" aria-expanded="false" aria-controls="collapseShip">
+                                    Compañías / Barcos
+                                </button>
+                            </h2>
+                            <div id="collapseShip" class="accordion-collapse collapse"
+                                data-bs-parent="#filterAccordion">
+                                <div class="accordion-body">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="shipRC">
+                                        <label class="form-check-label" for="shipRC">Royal Caribbean</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="shipMSC">
+                                        <label class="form-check-label" for="shipMSC">MSC Cruises</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="shipCarnival">
+                                        <label class="form-check-label" for="shipCarnival">Carnival</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Botón de aplicar filtros -->
+                    <button class="btn btn-ocean w-100 mt-3">Aplicar filtros</button>
+                </aside>
 
+                <!-- Sección de cards -->
+                <section class="col-md-9">
+                    <h1 class="mb-4">Destinos disponibles</h1>
+
+                    <div class="row row-cols-1 row-cols-md-2 g-4">
+                        <!-- Card 1 -->
+                        <div class="col">
+                            <div class="card h-100 shadow-sm">
+                                <img src="https://media.discordapp.net/attachments/741821454047248394/1363696060601466884/ChatGPT_Image_20_abr_2025_08_57_47_p.m..png?ex=6806f86d&is=6805a6ed&hm=2dc96e7b4d5932a54c7dac4a1fcce364216a1f396dbda11a385f12be4ed0cf5c&=&format=webp&quality=lossless&width=919&height=613"
+                                    class="card-img-top" alt="Caribe Occidental">
+                                <div class="card-body d-flex flex-column">
+                                    <h5 class="card-title">Caribe Occidental</h5>
+                                    <p class="card-text flex-grow-1">Visita Cozumel, Roatán y Costa Maya en un recorrido
+                                        inolvidable,
+                                        con playas de arena blanca y aguas cristalinas.</p>
+                                    <ul class="list-group list-group-flush mb-3">
+                                        <li class="list-group-item">Duración: 7 días</li>
+                                        <li class="list-group-item">Precio desde: $1,200 USD</li>
+                                        <li class="list-group-item">Salida: Miami</li>
+                                    </ul>
+                                    <a href="#" class="btn btn-ocean mt-auto">Ver Paquetes</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Card 2 -->
+                        <div class="col">
+                            <div class="card h-100 shadow-sm">
+                                <img src="https://media.discordapp.net/attachments/741821454047248394/1363696533148664079/ChatGPT_Image_20_abr_2025_09_01_37_p.m..png?ex=6806f8dd&is=6805a75d&hm=f6b22d917fbcdedebd851d6d15c362076841e6ee5a01a319289952edee6013f0&=&format=webp&quality=lossless&width=1097&height=732"
+                                    class="card-img-top" alt="Mediterráneo">
+                                <div class="card-body d-flex flex-column">
+                                    <h5 class="card-title">Mediterráneo Clásico</h5>
+                                    <p class="card-text flex-grow-1">Descubre Barcelona, Roma y Atenas con recorridos
+                                        culturales y
+                                        gastronomía local.</p>
+                                    <ul class="list-group list-group-flush mb-3">
+                                        <li class="list-group-item">Duración: 10 días</li>
+                                        <li class="list-group-item">Precio desde: $1,800 USD</li>
+                                        <li class="list-group-item">Salida: Barcelona</li>
+                                    </ul>
+                                    <a href="#" class="btn btn-ocean mt-auto">Ver Paquetes</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Card 3 -->
+                        <div class="col">
+                            <div class="card h-100 shadow-sm">
+                                <img src="https://media.discordapp.net/attachments/741821454047248394/1363697066366341334/ChatGPT_Image_20_abr_2025_09_03_52_p.m..png?ex=6806f95c&is=6805a7dc&hm=606ae49b0b5b0a38f22ca5b99c14154ebaf156a5c4b85899ac230d9a735ad684&=&format=webp&quality=lossless&width=914&height=914" class="card-img-top"
+                                    alt="Alaska">
+                                <div class="card-body d-flex flex-column">
+                                    <h5 class="card-title">Alaska Inexplorada</h5>
+                                    <p class="card-text flex-grow-1">Adéntrate en glaciares, fiordos y avistamiento de
+                                        fauna
+                                        salvaje en un crucero único.</p>
+                                    <ul class="list-group list-group-flush mb-3">
+                                        <li class="list-group-item">Duración: 8 días</li>
+                                        <li class="list-group-item">Precio desde: $2,400 USD</li>
+                                        <li class="list-group-item">Salida: Seattle</li>
+                                    </ul>
+                                    <a href="#" class="btn btn-ocean mt-auto">Ver Paquetes</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Card 4 -->
+                        <div class="col">
+                            <div class="card h-100 shadow-sm">
+                                <img src="https://media.discordapp.net/attachments/741821454047248394/1363702511030108221/undefined_image.png?ex=6806fe6e&is=6805acee&hm=516e0ab0200c9d3a061115801a2d51aaa3169d27b4731c44d8804c0d0c99d1e0&=&format=webp&quality=lossless&width=1066&height=800" class="card-img-top"
+                                    alt="Bahamas">
+                                <div class="card-body d-flex flex-column">
+                                    <h5 class="card-title">Escapada a Bahamas</h5>
+                                    <p class="card-text flex-grow-1">Playas de ensueño y actividades acuáticas en un
+                                        paraíso cercano a
+                                        Florida.</p>
+                                    <ul class="list-group list-group-flush mb-3">
+                                        <li class="list-group-item">Duración: 5 días</li>
+                                        <li class="list-group-item">Precio desde: $950 USD</li>
+                                        <li class="list-group-item">Salida: Fort Lauderdale</li>
+                                    </ul>
+                                    <a href="#" class="btn btn-ocean mt-auto">Ver Paquetes</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
     </main>
     <!--Footer-->
-    <footer class="row row-cols-5 py-5 mt-5  border-top bg-header text-white">
+    <footer class="row row-cols-5 py-5 mt-5 p-2  border-top bg-header text-white">
         <div class="col">
             <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
                 <svg class="bi me-2" width="40" height="32">
@@ -69,8 +233,10 @@
         <div class="col">
             <h5>Redes sociales</h5>
             <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a href="https://www.instagram.com" class="nav-link p-0 text-muted">Instagram</a></li>
-                <li class="nav-item mb-2"><a href="https://www.facebook.com" class="nav-link p-0 text-muted">Facebook</a></li>
+                <li class="nav-item mb-2"><a href="https://www.instagram.com"
+                        class="nav-link p-0 text-muted">Instagram</a></li>
+                <li class="nav-item mb-2"><a href="https://www.facebook.com"
+                        class="nav-link p-0 text-muted">Facebook</a></li>
                 <li class="nav-item mb-2"><a href="x.com" class="nav-link p-0 text-muted">X</a></li>
             </ul>
         </div>
