--- a/rutas.html
+++ b/rutas.html
@@ -22,16 +22,16 @@
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#">Destinos</a>
+                            <a class="nav-link active text-white" aria-current="page" href="rutas.html">Destinos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Paquetes</a>
+                            <a class="nav-link text-white" href="paquetes.html">Paquetes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Barcos</a>
+                            <a class="nav-link text-white" href="barcos.html">Barcos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Puertos</a>
+                            <a class="nav-link text-white" href="comprar.html">Comprar</a>
                         </li>
                     </ul>
                 </div>
