--- a/barcos.html
+++ b/barcos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,37 +8,31 @@
     <link rel="stylesheet" href="scss/dist/custom.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
+
 <body class="bg-white">
     <!--Header-->
+    <!--Aquí va el header-->
     <header>
         <nav class="navbar navbar-expand-lg bg-header">
             <div class="container-fluid">
                 <a class="navbar-brand text-white" href="main.html">TuCrucerito.com</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toogle-icon"></span>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" 
-                    style="--bs-scroll-height: 100px">
+                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page"
-                            href="rutas.html">Destinos</a>
+                            <a class="nav-link active text-white" aria-current="page" href="rutas.html">Destinos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page"
-                            href="paquetes.html">Paquetes</a>
+                            <a class="nav-link text-white" href="paquetes.html">Paquetes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" 
-                            href="barcos.html">Barcos</a>
-
+                            <a class="nav-link text-white" href="barcos.html">Barcos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page"
-                            href="puertos.html">Puertos</a>
-
+                            <a class="nav-link text-white" href="comprar.html">Comprar</a>
                         </li>
                     </ul>
                 </div>
@@ -46,63 +41,114 @@
     </header>
     <!--body-->
     <main class="py-4">
-        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0"
-                class="active" aria-label="Slide1"></button>
-                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1"
-                aria-label="Slide2"></button>
-                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2"
-                aria-label="Slide3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1950&q=80"
-                    class="d-block w-100" alt="Crucero al atardecer">
-                    <div class="container">
-                        <div class="carousel-caption bg-dark bg-opacity-75">
-                            <h1>Tu aventura comienza aquí.</h1>
-                            <p>Surca los mares con estilo y comodidad en nuestros exclusivos cruceros por el Caribe.</p>
-                            <p><a class="btn btn-lg btn-ocean" href="#">Explora destinos</a></p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <img src="https://images.unsplash.com/photo-1560264280-88b68371db39?auto=format&fit=crop&w=1950&q=80"
-                    class="d-block w-100" alt="Entretenimiento a bordo">
-                    <div class="container">
-                        <div class="carousel-caption bg-dark bg-opacity-75">
-                            <h1>Lujo Flotante.</h1>
-                            <p>Disfruta de experiencias únicas: gastronomía gourmet, piscinas infinitas y espectáculos de
-                                primer nivel gracias a nuestra perfectos inteninerarios.</p>
-                            <p><a class="btn btn-lg btn-ocean" href="#">Vive la Experiencia</a></p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <img src="https://cdn.discordapp.com/attachments/741821454047248394/1363675630457327766/ChatGPT_Image_20_abr_2025_07_35_02_p.m..png?ex=6806e566&is=680593e6&hm=d1d6eba2ca5fa6ec960c84cde343946dfa74970a964e6f8e7d10a2c0d1144d1d&"
-                    class="d-block w-100" alt="Entretenimiento a bordo">
-                    <div class="container">
-                        <div class="carousel-caption bg-dark bg-opacity-75">
-                            <h1>Destinos de Ensueño</h1>
-                            <p>De las costas de Grecia a los glaciares de Alaska, el mundo te espera a bordo de TuCrucerito.</p>
-                            <p><a class="btn btn-lg btn-ocean" href="#">Reserva ahora</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Anterior</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Siguiente</span>
-            </button>
-        </div>
+        <h1 class="text-dark text-center">Conoce a nuestra flota</h1>
         <br>
+
+        <div class="container">
+            <div class="row featurette">
+                <div class="col-md-7 text-end">
+                    <h3 class="featurette-heading">Aurora Sea. <span class="text-ocean">Lujo en cada ola.</span></h3>
+                    <p class="lead">
+                        <strong>Capitán:</strong> Elena Morales<br>
+                        <strong>Capacidad:</strong> 3,200 pasajeros<br>
+                        <strong>Suites:</strong> 150 de lujo con vista al mar<br>
+                        <strong>Áreas de recreación:</strong> Spa, piscina infinita, teatro, casino<br>
+                        <strong>Modelo:</strong> Oceanliner Class X<br>
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <img src="https://cdn-3.expansion.mx/dims4/default/e771a6a/2147483647/strip/true/crop/5995x4234+0+0/resize/1200x848!/format/webp/quality/60/?url=https%3A%2F%2Fcdn-3.expansion.mx%2Fc1%2Fec%2Fc371673b403a993283b6ff277687%2F1666103786-rci-ic-crowns-edge-cgi23-ret-crop-lr.JPG"
+                        class="img-fluid mx-auto" alt="Aurora Sea">
+                </div>
+                <div class="row-cols-5 text-center">
+                    <button class="btn-ocean btn-lg">Ver destinos dispnibles</button> 
+                    <!--Mejorar boton y agregar a los demás campos inferiores-->
+
+                </div>
+            </div>
+
+            <hr class="featurette-divider">
+
+            <div class="row featurette">
+                <div class="col-md-7 order-md-2">
+                    <h3 class="featurette-heading">Estrella del Norte. <span class="text-ocean">Tu guía en el
+                            horizonte.</span></h3>
+                    <p class="lead">
+                        <strong>Capitán:</strong> Jean-Luc Rousseau<br>
+                        <strong>Capacidad:</strong> 4,500 pasajeros<br>
+                        <strong>Suites:</strong> 200 premium<br>
+                        <strong>Áreas de recreación:</strong> Club nocturno, restaurantes gourmet, gimnasio
+                        panorámico<br>
+                        <strong>Modelo:</strong> Arctic Voyager 5000<br>
+                    </p>
+                </div>
+                <div class="col-md-5 order-md-1">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Queen_Mary_2_Boston_July_2015_01_%28cropped%29.jpg"
+                        class="img-fluid mx-auto" alt="Estrella del Norte">
+                </div>
+            </div>
+
+            <hr class="featurette-divider">
+
+            <div class="row featurette">
+                <div class="col-md-7 text-end">
+                    <h3 class="featurette-heading">Mar de Cristal. <span class="text-ocean">Serenidad en
+                            movimiento.</span>
+                    </h3>
+                    <p class="lead">
+                        <strong>Capitán:</strong> Rodrigo Sánchez<br>
+                        <strong>Capacidad:</strong> 2,800 pasajeros<br>
+                        <strong>Suites:</strong> 120 panorámicas<br>
+                        <strong>Áreas de recreación:</strong> Parque acuático, cine 4D, centro de yoga<br>
+                        <strong>Modelo:</strong> Serenity 88<br>
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Icon_of_the_Seas.jpg"
+                        class="img-fluid mx-auto" alt="Mar de Cristal">
+                </div>
+            </div>
+
+            <hr class="featurette-divider">
+
+            <div class="row featurette">
+                <div class="col-md-7 order-md-2">
+                    <h3 class="featurette-heading">Titan Horizon. <span class="text-ocean">Donde el poder y la elegancia
+                            se encuentran.</span></h3>
+                    <p class="lead">
+                        <strong>Capitán:</strong> Margaret O'Connell<br>
+                        <strong>Capacidad:</strong> 5,100 pasajeros<br>
+                        <strong>Suites:</strong> 250 executive<br>
+                        <strong>Áreas de recreación:</strong> Simulador de surf, pista de patinaje, centro comercial<br>
+                        <strong>Modelo:</strong> Horizon Max-Class 2025<br>
+                    </p>
+                </div>
+                <div class="col-md-5 order-md-1">
+                    <img src="https://i.blogs.es/d82af3/12/1366_2000.jpeg" class="img-fluid mx-auto"
+                        alt="Titan Horizon">
+                </div>
+            </div>
+
+            <hr class="featurette-divider">
+
+            <div class="row featurette">
+                <div class="col-md-7 text-end">
+                    <h3 class="featurette-heading">Velero Celeste. <span class="text-ocean">Una joya clásica del
+                            océano.</span></h3>
+                    <p class="lead">
+                        <strong>Capitán:</strong> Francisco Navarro<br>
+                        <strong>Capacidad:</strong> 1,800 pasajeros<br>
+                        <strong>Suites:</strong> 90 elegantes<br>
+                        <strong>Áreas de recreación:</strong> Biblioteca náutica, piano bar, solárium<br>
+                        <strong>Modelo:</strong> Classic Wind 75<br>
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <img src="https://royalcaribbean.com.pe/img/barcos/222_imagen_2625.jpg" class="img-fluid mx-auto"
+                        alt="Velero Celeste">
+                </div>
+            </div>
+        </div>
 
     </main>
 
@@ -156,6 +202,7 @@
         </div>
     </footer>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    
+
 </body>
+
 </html>
