--- a/barcos.html
+++ b/barcos.html
@@ -7,6 +7,7 @@
     <title>Barcos</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="scss/dist/custom.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 
 <body class="bg-white">
@@ -15,7 +16,8 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-header">
             <div class="container-fluid">
-                <a class="navbar-brand text-white" href="main.html">TuCrucerito.com</a>
+                <i class="bi bi-tsunami" style="color: aliceblue;"></i>
+                <a class="navbar-brand text-white ms-2" href="main.html">TuCrucerito.com</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                     aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
