--- a/comprar.html
+++ b/comprar.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="scss/dist/custom.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   <title>Comprar</title>
 </head>
 
@@ -14,7 +15,8 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-header">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="main.html">TuCrucerito.com</a>
+        <i class="bi bi-tsunami" style="color: aliceblue;"></i>
+        <a class="navbar-brand text-white ms-2" href="main.html">TuCrucerito.com</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
           aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toogle-icon"></span>
